@@ -1,5 +1,10 @@
 2000-08-30  Tristan Tarrant  <nadir@users.sourceforge.net>
 
+	* tools/u7shpload.c: Prompt user for a palette file for loading.
+	Decent colours at last !!!
+
+2000-08-30  Tristan Tarrant  <nadir@users.sourceforge.net>
+
 	* tools/u7shpload.c: Fixed serious bug where opening multiple SHPs
 	would not work. Saving is still screwed...
 
